# aws-shiritori

./: .gitignore  aws-catalog.yml  main.ipynb  pyproject.toml
