[tool.poetry]
name = "aws-shiritori"
version = "0.1.0"
description = ""
authors = ["shio-yaamaa <shio.yama520@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.2.9"
networkx = "^2.5"
pandas = "^1.1.4"
pulp = "^2.3.1"
ortoolpy = "^0.2.37"
pyyaml = "^5.3.1"
pygraphviz = "^1.6"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
